Added extra packages

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -5,5 +5,7 @@
     name: "{{ item }}"
     state: present
   become: true
-  with_items: - https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm
+  with_items:
+  - https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+  - https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm
   - https://download1.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-7.noarch.rpm
