--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,11 +1,5 @@
 ---
 
-- name: add rpm fusion free and non free repos
-  yum:
-    name: "{{ item }}"
-    state: present
-  become: true
-  with_items:
-  - https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-  - https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm
-  - https://download1.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-7.noarch.rpm
+- name: update apt
+  apt:
+    update_cache: yes
