--- a/playbook.yml
+++ b/playbook.yml
@@ -6,14 +6,14 @@
     - common
 
 - hosts: database
-  vars: 
-  postgresql_objects_users:
-    - name: dbadmin
-      password: password
-      role_attr_flags: SUPERUSER
-  postgresql_objects_databases:
-    - name: dbadmin
-      owner: dbadmin
+  vars:
+    postgresql_objects_users:
+      - name: dbadmin
+        password: password
+        role_attr_flags: SUPERUSER
+    postgresql_objects_databases:
+      - name: dbadmin
+        owner: dbadmin
 
   pre_tasks:
     - name: install postgres and pyscopg2
@@ -27,6 +27,7 @@
   roles:
     - common
     - postgresql_objects
+      become: true
 
 - hosts: loadbalancer
 
