--- a/playbook.yml
+++ b/playbook.yml
@@ -6,28 +6,31 @@
     - common
 
 - hosts: database
-  vars:
-    postgresql_objects_users:
+    vars:
+      postgresql_objects_users:
       - name: dbadmin
         password: password
         role_attr_flags: SUPERUSER
-    postgresql_objects_databases:
-      - name: dbadmin
-        owner: dbadmin
-
-  pre_tasks:
-    - name: install postgres and pyscopg2
-      apt:
-        name: "{{ item }}"
         state: present
-      become: true
-      with_items:
-        - postgresql
-        - python-psycopg2
-  roles:
-    - role: common
-    - role: postgresql_objects
-      become: true
+      postgresql_objects_databases:
+        - name: dbadmin
+          owner: dbadmin
+          state: present
+
+    pre_tasks:
+      - name: install postgres and pyscopg2
+        apt:
+          name: "{{ item }}"
+          state: present
+        become: true
+        with_items:
+          - postgresql
+          - python-psycopg2
+    roles:
+      - role: common
+      - role: postgresql_objects
+        become: true
+
 
 - hosts: loadbalancer
 
