--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -1,23 +1,23 @@
 ---
-- name: install postgres and pyscopg2
+- name: add postgres repository
+  apt_repository:
+    repo: deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main
+    state: present
+  become: true
+
+- name: add postgres repo key
+  apt_key:
+    url: https://www.postgresql.org/media/keys/ACCC4CF8.asc
+    state: present
+  become: true
+
+- name: install postgres 9.5, postgres-php module and pyscopg2
   apt:
     name: "{{ item }}"
     state: present
+    update_cache: yes
   become: true
   with_items:
-    - postgresql
+    - postgresql-9.5
+    - php5-pgsql
     - python-psycopg2
-
-- name: create database
-  postgresql_db:
-    name: my_db
-    state: present
-  become: true
-
-- name: create database user
-  postgresql_user:
-    name: vagrant
-    password: vagrant
-    state: present
-  become: true
-  become_user: postgres
