fixed spelling mistake in haproxy/tasks/main.yml  Please enter the commit message for your changes. Lines starting

--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -14,7 +14,7 @@
 
 - name: copy over rsyslog to ensure HAProxy stats are logged
   copy:
-    src: files/rsyslof.conf
+    src: files/rsyslog.conf
     dest: /etc/rsyslog.conf
   become: true
   notify: restart rsyslog
