fixed haproxy bug and updated ips

--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -19,6 +19,13 @@
   become: true
   notify: restart rsyslog
 
+- name: copy over HAProxy defaults file to ensure it starts on start up
+  copy:
+    src: files/haproxy
+    dest: /etc/default/haproxy
+    state: present
+  become: true
+
 - name: start haproxy and enable on start up
   service:
     name: haproxy
