added handler for haproxy config

--- a/roles/haproxy/handlers/main.yml
+++ b/roles/haproxy/handlers/main.yml
@@ -4,3 +4,9 @@
     name: rsyslog
     state: restarted
   become: yes
+
+- name: restart haproxy
+  service:
+    name: haproxy
+    state: restarted
+  become: true
