--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -12,6 +12,14 @@
     dest: /etc/haproxy/haproxy.cfg
   become: true
 
+- name: start haproxy and enable on start up
+  service:
+    name: haproxy
+    state: started
+    enabled: yes
+  become: true
+
+
 - name: copy over rsyslog to ensure HAProxy stats are logged
   copy:
     src: files/rsyslog.conf
@@ -24,10 +32,4 @@
     src: files/haproxy
     dest: /etc/default/haproxy
   become: true
-
-- name: start haproxy and enable on start up
-  service:
-    name: haproxy
-    state: started
-    enabled: yes
-  become: true
+  notify: restart haproxy
