--- a/roles/nginx/files/www.conf
+++ b/roles/nginx/files/www.conf
@@ -36,9 +36,9 @@ listen.group = nobody
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
 ; RPM: apache Choosed to be able to access some dir as httpd
-user = nginx
+user = www-data
 ; RPM: Keep a group allowed to write in log dir.
-group = nginx
+group = www-data
 
 ; Choose how the process manager will control the number of child processes.
 ; Possible Values:
