--- a/ansible/dev/group_vars/all/vars.yml
+++ b/ansible/dev/group_vars/all/vars.yml
@@ -4,4 +4,4 @@ ansible_ssh_private_key_file: ~/.ssh/ANNA.pem
 ansible_user: ubuntu
 env: dev
 db_ip: 10.0.1.20
-db_password: {{ vault_db_password }}
+db_password: "{{ vault_db_password }}"
