fixed yaml syntax

--- a/ansible/dev/group_vars/database/vars.yml
+++ b/ansible/dev/group_vars/database/vars.yml
@@ -8,5 +8,5 @@
   - name: dbadmin
     owner: dbadmin
     state: present
-postgresql_objects_become: true
-postgresql_objects_become_user: postgres
+- postgresql_objects_become: true
+- postgresql_objects_become_user: postgres
