--- a/ansible/prod/group_vars/all/vars.yml
+++ b/ansible/prod/group_vars/all/vars.yml
@@ -1,9 +1,10 @@
 ---
 
-ansible_ssh_private_key_file: /var/lib/jenkins/.ssh/ANNA.pem
+ansible_ssh_private_key_file: "{{ vault_ansible_ssh_private_key_file }}"
 ansible_user: ubuntu
 env: prod
 server1_ip: 10.0.5.114
 server2_ip: 10.0.5.138
 db_ip: 10.0.5.237
 db_password: "{{ vault_db_password }}"
+lb_algo: roundrobin
