--- a/ansible/roles/postgres/tasks/main.yml
+++ b/ansible/roles/postgres/tasks/main.yml
@@ -27,3 +27,11 @@
     src: files/postgresql.conf
     dest: /etc/postgresql/9.5/main/postgresql.conf
   become: true
+  notify: restart postgres
+
+- name: edit pg_hba to allow webservers to authenticate
+  template:
+    src: templates/pg_hba.conf
+    dest: /etc/postgresql/9.5/main/pg_hba.conf
+  become: true
+  notify: restart postgres
