--- a/ansible/prod/group_vars/all/vars.yml
+++ b/ansible/prod/group_vars/all/vars.yml
@@ -6,6 +6,7 @@ env: prod
 server1_ip: 10.0.5.114
 server2_ip: 10.0.5.138
 db_ip: 10.0.5.237
+webserver_subnet: 10.0.5.0/24
 db_password: "{{ vault_db_password }}"
 lb_algo: roundrobin
 db_user: dbadmin
