--- a/ansible/roles/postgres/templates/prod_pg_hba.conf
+++ b/ansible/roles/postgres/templates/prod_pg_hba.conf
@@ -11,4 +11,4 @@ host    all             all             127.0.0.1/32            md5
 host    all             all             ::1/128                 md5
 
 #allow connections from webservers using ip addressed
-host    {{ db_name }}         {{ db_user }}         {{ server1_ip }}        md5
+host    {{ db_name }}         {{ db_user }}         {{ webserver_subnet }}         md5
