changed pg_hba for local passwordless login

--- a/ansible/roles/postgres/templates/prod_pg_hba.conf
+++ b/ansible/roles/postgres/templates/prod_pg_hba.conf
@@ -1,5 +1,6 @@
 # Database administrative login by Unix domain socket
 local   all             postgres                                peer
+local   {{ db_name }}   {{ db_user }}                           peer
 
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
