changed shell command to only run when not check

--- a/ansible/roles/add_to_database/tasks/main.yml
+++ b/ansible/roles/add_to_database/tasks/main.yml
@@ -34,5 +34,5 @@
   ignore_errors: yes
 
 - name: add table and data if it doesn't exist
-  command: "psql -U {{db_user }} -d {{ db_ name }} -f compliments.psql"
-  when: table_exists.rc == 1
+  command: "psql -U {{db_user }} -d {{ db_name }} -f compliments.psql"
+  when: table_exists.rc == 1 and check == no
