postgresql objects also skips testing

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -10,7 +10,7 @@
 
   roles:
     - role: postgres
-    - role: postgresql_objects
+    - { role: postgresql_objects, tags: test }
     - role: add_to_database
 
 - hosts: loadbalancer
