added right autentication for db user

--- a/ansible/roles/add_to_database/templates/dev_pg_hba.conf
+++ b/ansible/roles/add_to_database/templates/dev_pg_hba.conf
@@ -1,6 +1,6 @@
 # Database administrative login by Unix domain socket
 local   all             postgres                                peer
-local   {{ db_name }}   {{ db_user }}                           peer
+local   {{ db_name }}   {{ db_user }}                           trust
 
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 # "local" is for Unix domain socket connections only
