--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -3,5 +3,9 @@
 - name: update apt
   apt:
     update_cache: yes
-    upgrade: yes
+
   become: true
+
+- name: upgrade apt
+  apt:
+    upgrade: yes
