fixed datatbase restart erro Please enter the commit message for your changes. Lines starting

--- a/ansible/roles/add_to_database/tasks/main.yml
+++ b/ansible/roles/add_to_database/tasks/main.yml
@@ -21,7 +21,8 @@
     name: postgresql
     state: restarted
   become: true
-  when: pg_hba_dev.changed
+  when: pg_hba_dev.changed or pg_hba.changed
+
 
 - name: copy over psql script
   copy:
