added amster provisioning steps

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 #ignore the enviroments directory and all ips and vars contained within
 
-/ansible/master/**/*
+/ansible/master/roles/*
+/ansible/master/*.yml
+/asnible/master/*.retry
