--- a/ansible/roles/jenkins/files/githook.yaml
+++ b/ansible/roles/jenkins/files/githook.yaml
@@ -1,13 +1,1 @@
-- job:
-    name: githook
-    project-type: freestyle
-    properties:
-      - github:
-          url: https://github.com/ahackettboyle/hmcts.git
-    scm:
-      - git:
-          url: https://github.com/ahackettboyle/hmcts.git
-
-
-    triggers:
-      - github
+/Users/maxrady/hmcts/jenkins/githook.yaml
